@@ -1,3 +1,12 @@
+2008-03-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/java/lang/CPStringBuilder.java:
+	Replace reflection code with calls to
+	VMCPStringBuilder.
+	* vm/reference/gnu/java/lang/VMCPStringBuilder.java:
+	Default implementation of constructor call
+	using reflection.
+	
 2008-03-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/xml/dom/DomAttr.java,
